# play-sound-by-touch-android-box2dv3-sdl3-c

./: CMakeLists.txt  README.md
.github/workflows/: main.yml
android-project/app/: .lldbinit  build.gradle
android-project/app/src/main/: AndroidManifest.xml
src/: box2d-debug-drawer.h  context.h  main.c
